apps/open-webui/service-default-open-webui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: open-webui
    component: app
  name: open-webui
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: open-webui
    component: app
    managed-by: terraform
  sessionAffinity: None
  type: ClusterIP
