apps/open-webui/ingressroute-default-open-webui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: open-webui
    component: app
  name: open-webui
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`chat.brmartin.co.uk`)
    services:
    - name: open-webui
      port: 80
  tls:
    secretName: wildcard-brmartin-tls
